# moe-bench

./: .dockerignore  .gitignore  BACKENDS.md  CLAUDE.md  Dockerfile  README.md  context.md  pyproject.toml
configs/: qwen3_a3b.yaml  qwen3_a3b_4gpu_grid.yaml  qwen3_a3b_4gpu_quick.yaml  smoke.yaml  stack_search_smoke.yaml  stack_smoke.yaml
docs/: optimization.md  parallelism_sweep.md  writing_a_sweep_config.md
issues/: 001-fix-parallelism-sweep.md  prd-docker-container.md  prd.md
issues/done/: 002-zero-floor-geomean.md  003-failure-callout.md  004-decision-hero-and-dividers.md  005-top-k-caps.md  006-slider-scope-expansion.md  007-docker-container.md  prd-report-redesign.md
logs/: qwen3-30b-a3b-vllm-tools.pid
moe_bench/: backends.py  cli.py  config.py  failure_summary.py  html_report.py  normalize.py  plots.py  rank.py  recommendation.py  report.py  runner.py  utils.py
results/qwen3-a3b-4gpu-parallelism/: candidates.csv  config.yaml  failures.csv  manifest.json  normalized.csv  rankings.csv  report.md
results/qwen3-a3b-4gpu-parallelism/raw/sglang/sglang_tp4/: server_command.json  status.json
results/qwen3-a3b-4gpu-parallelism/raw/sglang/sglang_tp4_dpattn/: server_command.json  status.json
results/qwen3-a3b-4gpu-parallelism/raw/sglang/sglang_tp4_dpattn2_ep/: server_command.json  (+1 more)
scripts/: check_backend_envs.sh  create_backend_venvs.sh  run_parallelism_sweep.sh  run_qwen3_a3b_grid.sh  run_qwen3_a3b_quick.sh
tests/: test_config_overrides.py  test_config_paths.py  test_failure_summary.py  test_html_caps.py  test_recommendation.py  test_robustness_geomean.py
(+262 files in other folders)
